--- a/PeerPair/Base.lproj/Main.storyboard
+++ b/PeerPair/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,53 +17,77 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Nsr-Bn-SVA">
-                                <rect key="frame" x="20" y="98.666666666666686" width="374" height="704.33333333333326"/>
+                                <rect key="frame" x="20" y="98.333333333333314" width="374" height="704.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <string key="text">Welcome to the Peer Pair tech demo!
+
+I needed to deeply understand the Multipeer Connectivity library to correctly pair devices to play my iOS board game, What the Shell. If you want to see how this works in a real app, tapping the turtle at the bottom of the screen will take you to the App Store where you can download it!
+
+Tap the Connect button to start advertising and browsing for other devices.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STn-ia-fws">
-                                <rect key="frame" x="166.66666666666666" y="52" width="81" height="38.666666666666657"/>
+                                <rect key="frame" x="166.33333333333334" y="52" width="81.666666666666657" height="38.333333333333343"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JJE-zs-Bcn">
-                                <rect key="frame" x="186" y="811" width="42" height="43"/>
-                                <state key="normal" image="Black Turtle"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdc-XE-3XM">
-                                <rect key="frame" x="96" y="813" width="82" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <state key="normal" title="Connect"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cPn-E8-EYe">
-                                <rect key="frame" x="236" y="813" width="108" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <state key="normal" title="Disconnect"/>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CFj-E0-aIu">
+                                <rect key="frame" x="57.666666666666657" y="811" width="299" height="43"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdc-XE-3XM">
+                                        <rect key="frame" x="0.0" y="0.0" width="82" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <state key="normal" title="Connect"/>
+                                        <connections>
+                                            <action selector="connectTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5XO-e1-7hr"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KNW-8X-kFr">
+                                        <rect key="frame" x="90" y="0.0" width="43" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <state key="normal" title="Ping"/>
+                                        <connections>
+                                            <action selector="pingTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="985-3o-MTS"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JJE-zs-Bcn" userLabel="Turtle Button">
+                                        <rect key="frame" x="141" y="0.0" width="42" height="43"/>
+                                        <state key="normal" image="Black Turtle"/>
+                                        <connections>
+                                            <action selector="turtleTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XN3-o8-Htz"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cPn-E8-EYe">
+                                        <rect key="frame" x="191" y="0.0" width="108" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <state key="normal" title="Disconnect"/>
+                                        <connections>
+                                            <action selector="disconnectTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ds1-og-4yo"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="cPn-E8-EYe" firstAttribute="centerY" secondItem="JJE-zs-Bcn" secondAttribute="centerY" id="3VL-IV-khi"/>
-                            <constraint firstItem="cPn-E8-EYe" firstAttribute="leading" secondItem="JJE-zs-Bcn" secondAttribute="trailing" constant="8" id="AHx-XN-5RV"/>
-                            <constraint firstItem="cdc-XE-3XM" firstAttribute="centerY" secondItem="JJE-zs-Bcn" secondAttribute="centerY" id="DVb-kq-JCL"/>
+                            <constraint firstItem="CFj-E0-aIu" firstAttribute="top" secondItem="Nsr-Bn-SVA" secondAttribute="bottom" constant="8" id="7ju-pt-7Ym"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CFj-E0-aIu" secondAttribute="bottom" constant="8" id="D4G-BW-RmK"/>
                             <constraint firstItem="STn-ia-fws" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="UUx-1U-vyP"/>
-                            <constraint firstItem="JJE-zs-Bcn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WPr-0n-Uge"/>
-                            <constraint firstItem="JJE-zs-Bcn" firstAttribute="top" secondItem="Nsr-Bn-SVA" secondAttribute="bottom" constant="8" id="X3E-6s-iQP"/>
-                            <constraint firstItem="JJE-zs-Bcn" firstAttribute="leading" secondItem="cdc-XE-3XM" secondAttribute="trailing" constant="8" id="d8O-bj-h75"/>
                             <constraint firstItem="Nsr-Bn-SVA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="l1P-tP-pJu"/>
                             <constraint firstItem="STn-ia-fws" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ndT-kn-gvB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Nsr-Bn-SVA" secondAttribute="trailing" constant="20" id="oOx-WG-lFP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cPn-E8-EYe" secondAttribute="trailing" id="p1R-xW-omL"/>
+                            <constraint firstItem="CFj-E0-aIu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qGI-OO-YWH"/>
                             <constraint firstItem="Nsr-Bn-SVA" firstAttribute="top" secondItem="STn-ia-fws" secondAttribute="bottom" constant="8" id="qjq-Xh-cYy"/>
-                            <constraint firstItem="cdc-XE-3XM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tZ6-Wm-fuP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JJE-zs-Bcn" secondAttribute="bottom" constant="8" id="yC1-26-uA6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="logTextView" destination="Nsr-Bn-SVA" id="Tz2-0D-NDI"/>
+                        <outlet property="nameLabel" destination="STn-ia-fws" id="VyF-an-dw7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
